test/langtools/tools/javac/valhalla/value-objects/SemanticsViolationsTest.out
SemanticsViolationsTest.java:40:20: compiler.err.illegal.combination.of.modifiers: identity, value
SemanticsViolationsTest.java:12:28: compiler.err.cant.inherit.from.final: SemanticsViolationsTest.Base
SemanticsViolationsTest.java:65:27: compiler.err.mod.not.allowed.here: synchronized
SemanticsViolationsTest.java:90:27: compiler.err.mod.not.allowed.here: synchronized
SemanticsViolationsTest.java:12:5: compiler.err.identity.type.has.value.super.type: SemanticsViolationsTest.Subclass, SemanticsViolationsTest.Base
SemanticsViolationsTest.java:16:20: compiler.err.super.class.cannot.be.inner: (compiler.misc.abstract.value.class: SemanticsViolationsTest.AbsValue)
SemanticsViolationsTest.java:29:17: compiler.err.cant.assign.val.to.final.var: x
SemanticsViolationsTest.java:34:17: compiler.err.cant.assign.val.to.final.var: y
SemanticsViolationsTest.java:42:11: compiler.err.concrete.supertype.for.value.class: SemanticsViolationsTest.IdentityValue2, SemanticsViolationsTest
SemanticsViolationsTest.java:47:11: compiler.err.super.field.not.allowed: xx, (compiler.misc.superclass.of.value.class: SemanticsViolationsTest.BrokenValue3, SemanticsViolationsTest.AbstractWithState)
SemanticsViolationsTest.java:59:13: compiler.err.call.to.super.not.allowed.in.value.ctor
SemanticsViolationsTest.java:67:11: compiler.err.type.found.req: SemanticsViolationsTest.BrokenValue5, (compiler.misc.type.req.identity)
SemanticsViolationsTest.java:72:21: compiler.err.value.class.may.not.override: finalize
SemanticsViolationsTest.java:32:9: compiler.err.var.might.not.have.been.initialized: z
SemanticsViolationsTest.java:81:17: compiler.err.this.exposed.prematurely
SemanticsViolationsTest.java:81:16: compiler.err.this.exposed.prematurely
16 errors
